# infrastructure/entry-points/reactive-web/src/main/java/co/com/crediyarequest/api/RouterRest.java
@@ -21,7 +21,7 @@ public class RouterRest {
     public RouterFunction<ServerResponse> userRoutes() {
         return route()
                 .POST("/api/v1/applications", applicationHandler::createApplication)
-                .GET("/api/v1/applications", applicationHandler::getListApplication)
+                .GET("/api/v1/applications", applicationHandler::getAllSolicitudes)
                 .GET("/openapi/openapi.yaml", request ->
                         ServerResponse.ok()
                                 .contentType(MediaType.parseMediaType("application/yaml"))
